# ptx2pdf

./: .gitignore  pyproject.toml
debian/: changelog  control  rules
docs/home/: README.md
docs/inno-docs/: ReleaseNotes.txt
python/: LICENSE.txt  setup.py
python/lib/ptxprint/: borderstyle.py  eng.vrs  font.py  gtkstyleditor.py  gtkview.py  interlinear.py  pdf_viewer.py  picCopyrights.json  ptxprint.glade  runjob.py  scriptsnippets.py  texlog.py  texmodel.py  usfmerge.py  utils.py
python/lib/ptxprint/pdf/: fixcol.py
python/lib/ptxprint/sfm/: records.py  style.py  usfm.sty  usfm_sb.sty
python/scripts/: harvestpicinfo.py  polyglot_merge.pl  tsk2xml
snap/: snapcraft.yaml
src/: ornaments.tex  paratext2.tex  ptx-adj-list.tex  ptx-callers.tex  ptx-diglot.tex  ptx-extended.tex  ptx-figure.tex  ptx-para-style.tex  ptx-periph.tex  ptx-pic-list.tex  ptx-stylesheet.tex  ptx-triggers.tex  usfm.sty
src/contrib/: QRcode.tex
